Fixed homepage heights on mobile.

--- a/assets/scss/pages/home/_base.scss
+++ b/assets/scss/pages/home/_base.scss
@@ -2,8 +2,10 @@
   .home & {
     display: flex;
     flex-flow: row wrap;
+    min-height: 100%;
 
     @media (min-width: 701px) {
+      min-height: auto;
       flex-flow: row nowrap;
     }
   }
